updated for hw 20

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div>
             <h4>North American Butterfly Association Redesign</h4>
             <p>The NABA redesign project aims to transform the online presence of the North American Butterfly Association into a captivating and user-centric experience. Through user research, we will gather insights on pain points and challenges faced by stakeholders of NABA, and aim to solve these through a website redesign.</p>
-            <button>View Project</button>
+            <button><a href="https://jasmine-gutierrez.github.io/UX_UI_HW20/">View Project</a></button>
         </div>
 
         <div class="project2">
